--- a/index.ipynb
+++ b/index.ipynb
@@ -24,10 +24,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.08333333333333333"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "P_h =1/2\n",
+    "  \n",
+    "P_3\t= 1/6\n",
+    "\n",
+    "#As the events are independent \n",
+    "P = P_h*P_3\n",
+    "P"
+   ]
   },
   {
    "cell_type": "markdown",
