Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -60,11 +60,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5120000000000001"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your Solution"
+    "# Your Solution\n",
+    "#Probabilities\n",
+    "P_subject1 = P_subject2 = P_subject3 = 8/10\n",
+    "    \n",
+    "# Probability that subject 1 and subject 2 and subject 3 like chocolate chip cookies\n",
+    "# Remember (With replacement) makes these trials independent\n",
+    "P_1_2_3 = P_subject1*P_subject2*P_subject3\n",
+    "\n",
+    "\n",
+    "P_1_2_3"
    ]
   },
   {
