--- a/index.ipynb
+++ b/index.ipynb
@@ -99,11 +99,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your solution "
+    "# Your solution \n",
+    "# P(Strawberry|Chocolate) = P(Chocolate and Strawberry) / P(Chocolate)\n",
+    "\n",
+    "p_strberry_given_choc = 0.35 / 0.7\n",
+    "p_strberry_given_choc"
    ]
   },
   {
