--- a/index.ipynb
+++ b/index.ipynb
@@ -133,11 +133,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.004524886877828055"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your solution\n"
+    "# Your solution\n",
+    "# Let Event A is drawing the first ace, and Event B is drawing a second ace\n",
+    "\n",
+    "#For the first card the chance of drawing an ace is 4 out of 52 (there are 4 aces in a deck of 52 cards):\n",
+    "\n",
+    "P_A = 4/52\n",
+    "\n",
+    "# But after removing an ace from the deck the probability of the 2nd card drawn is less likely to be a ace (only 3 of the 51 cards left are aces):\n",
+    "\n",
+    "P_B_given_A = 3/51\n",
+    "\n",
+    "#And so according to the product rule:\n",
+    "\n",
+    "P_A_and_B = P_A * P_B_given_A\n",
+    "P_A_and_B"
    ]
   },
   {
