--- a/index.ipynb
+++ b/index.ipynb
@@ -231,11 +231,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.19999999999999998"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your solution\n"
+    "# Your solution\n",
+    "p_B_given_A = (4/36)/(20/36) \n",
+    "p_B_given_A  "
    ]
   },
   {
@@ -266,7 +279,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your solution"
+    "# Your solution\n"
    ]
   },
   {
