--- a/index.ipynb
+++ b/index.ipynb
@@ -275,11 +275,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your solution\n"
+    "# Your solution\n",
+    "p_B_given_A = 0.25/0.5  \n",
+    "p_B_given_A "
    ]
   },
   {
